ci: combine `keep-alive.yml` to scheduled action `gcc-version-update.yml`

--- a/.github/workflows/gcc-version-update.yml
+++ b/.github/workflows/gcc-version-update.yml
@@ -2,7 +2,7 @@ name: gcc-arm-none-eabi update
 
 on:
   schedule:
-    - cron: "0 0 1 */3 *" # at 00:00 on day-of-month 1, every 3 months
+    - cron: "0 0 1 * *" # at 00:00 on day-of-month 1, every 3 months
   push:
     branches:
       - main
@@ -47,3 +47,14 @@ jobs:
             git add assets/versions.json
             git diff --cached --quiet || git commit -m "Update versions.json to the latest"
             git push origin main
+
+      - name: Keep workflow active
+        run: |
+          git fetch origin main
+          if [ "$(git rev-parse HEAD)" = "$(git rev-parse origin/main)" ]; then
+            echo "No new commit was created, creating an empty commit to keep active"
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git commit --allow-empty -m "chore: keep workflow active"
+            git push origin main
+          fi
